# sgra-dynamics-evaluation

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  docs.md  driver.py  environment.yml  evaluate.py  evaluation.py  params.yml  plot.py  pyproject.toml
.github/workflows/: docs.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  metrics.rst  parameters.rst  quickstart.rst  theory.rst  usage.rst
docs/_static/: custom.css
docs/api/: index.rst
src/: Project.toml  VIDA_score.ipynb  __init__.py  chisq.py  cylinder.py  cylinder_old.py  cylinder_xi_crit_optimization_clean.py  dynamic.py  gif.py  gif_cp.py  gif_dynamic.py  gif_dynamic_lp.py  gif_lp.py  gif_speed.py  hdf5_standardize.py  hotspot.py  mbreve.py  mean_image_extraction.py  merge_csv_vida.py  merge_csv_vida_pol.py  nxcorr.py  nxcorr_dynamic.py  nxcorr_dynamic_threshold.py  nxcorr_dynamic_threshold_noclip.py  nxcorr_static.py  nxcorr_static_threshold.py  nxcorr_threshold.py  obs.py  obs_scatt_std_3601.pickle  patternspeed.py  patternspeed_v2.py  preimcal.py  preprocess_hdf5.py  regrid.py  rex.py  setup.jl  static.py  static_image.py  static_lp_image.py  test.py  (+9 more)
tests/: test_chisq.py  test_hotspot.py  test_mean_image_extraction.py  test_nxcorr.py  test_patternspeed.py  test_preprocess_hdf5.py  test_rex.py  test_vida.py  test_vida_pol.py  test_visualize.py
